# statecs

./: Cargo.toml
.github/workflows/: rust.yml
examples/: example.rs
procs/: Cargo.toml
procs/src/: lib.rs
src/: component.rs  entity.rs  lib.rs  system.rs  tuple_proc.rs
