workspace = { members = ["procs"] }
[package]
name = "statecs"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
procs = { path = "procs" }

[dev-dependencies]
tokio-test = "0.4.4"
tokio = { version = "1", features = ["full"] }